fix: ensure window-manager-view-wrapper z-index order

--- a/src/style.css
+++ b/src/style.css
@@ -185,4 +185,5 @@
     position: absolute;
     left: 0;
     top: 0;
+    z-index: 1;
 }
